--- a/app/styles/creative.css
+++ b/app/styles/creative.css
@@ -178,7 +178,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background: url(../img/header.jpg) center;
+    background: url(../images/header.jpg) center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
