--- a/app/styles/creative.css
+++ b/app/styles/creative.css
@@ -185,6 +185,15 @@ header {
     -o-background-size: cover;
 }
 
+header .background-overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.30);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 header .header-content {
     position: relative;
     width: 100%;
